--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -1,29 +1,100 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>A-Frame 3D Force-Directed Graph Component - Basic</title>
-    <meta name="description" content="Basic example for 3D Force-Directed Graph component."></meta>
-    <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
-    <script src="../../dist/aframe-forcegraph-component.min.js"></script>
-  </head>
-  <body>
-    <a-scene stats>
-      <a-camera wasd-controls="fly: true; acceleration: 600">
-        <a-cursor color="lavender" opacity="0.5"></a-cursor>
-      </a-camera>
-      <a-sky color="#002"></a-sky>
+<head>
+  <meta charset="utf-8">
+  <title>A-Frame 3D Force-Directed Graph Component - Basic</title>
+  <meta name="description" content="Basic example for 3D Force-Directed Graph component."></meta>
+  <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
+  <script src="../../dist/aframe-forcegraph-component.js"></script>
+  <script src="../../extension/graph_ext.js"></script>
+  <script src="../../extension/my-vive.js"></script>
 
-      <a-entity forcegraph="json-url: miserables.json; node-label: id; node-auto-color-by: group; link-directional-arrow-length: 1.5; link-directional-arrow-rel-pos: 1;"></a-entity>
-    </a-scene>
 
-    <!-- GitHub Corner. -->
-    <a href="https://github.com/vasturiano/aframe-forcegraph-component" class="github-corner">
-      <svg width="80" height="80" viewBox="0 0 250 250" style="fill:#222; color:#fff; position: absolute; top: 0; border: 0; right: 0;">
-        <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path>
-      </svg>
-    </a>
-    <style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
-    <!-- End GitHub Corner. -->
-  </body>
+
+
+</head>
+<body>
+<a-scene stats
+         vive-controls
+         my-vive="fly: true; acceleration: 600, enabled: true; camID: #d_cam; elID: #rig2; triggerConf: 1; on-trigger-down: function(){ viveTriggerDown()}; on-trigger-up: function() {}  ">
+
+  <a-entity id="rig2"
+            position="10 10 10">
+    <a-entity laser-controls id="liney"  line="color: red; opacity: 0.75" >
+      <a-cursor color="lavender" opacity="0.5"></a-cursor>
+    </a-entity>
+
+    <a-entity id="d_cam" camera="active:true"
+              wasd-controls="fly: true; acceleration: 600, enabled: false"
+              look-controls="pointerLockEnabled: true, enabled: true">
+      <a-entity id="detail" geometry="primitive: box" material="color: green"  scale="5 5 5" position="0 0 0" log change-color-on-hover="color: red" ></a-entity>
+      <a-cursor color="lavender" opacity="0.5"></a-cursor>
+    </a-entity>
+  </a-entity>
+
+
+  <a-sky color="#002"></a-sky>
+
+  <a-entity id="theforce" forcegraph="json-url: miserables.json; node-label: id; node-auto-color-by: group; link-directional-arrow-length: 3; link-directional-arrow-rel-pos: 1; link-width: 0.5; link-opacity: 0.5; link-resolution: 4; on-node-center-hover: function(args1){ onNodeHover(args1) }; on-node-clicked: function(args1){ onNodeMouseClick(args1) }"></a-entity>
+</a-scene>
+
+
+<script>
+    console.log("registering event listeners...")
+    var fgraph =  document.querySelector('a-entity[forcegraph]');
+    var laser =  document.querySelector('#liney');
+    var scene = document.querySelector('a-scene');
+    var myViveCntrls = scene.components["my-vive"];
+
+
+    laser.addEventListener('child-attached', function (evt) {
+        console.log(evt);
+        if (evt.detail.el.tagName.toLowerCase() === 'raycaster') {
+            console.log('******* a raycaster element has been attached ******* ');
+        };
+    });
+    laser.addEventListener('child-detached', function (evt) {
+        console.log(evt);
+        if (evt.detail.el.tagName.toLowerCase() === 'raycaster') {
+            console.log('******* a raycaster element has been removed ******* ');
+        };
+    });
+    laser.addEventListener('componentinitialized', function (evt) {
+        console.log("initialized: " + evt.detail.name);
+
+        if (evt.detail.name == 'line' || evt.detail.name == 'raycaster') {
+            console.log("activating laser tracking");
+            laser.emit('laser-added', this, true);
+            fgraph.components.forcegraph.data.useLaserRay = true;
+        }
+    });
+    laser.addEventListener('componentremoved', function (evt) {
+        console.log("removed: " + evt.detail.name);
+
+        if (evt.detail.name == 'line') {
+            console.log("turning off laser tracking");
+            fgraph.components.forcegraph.data.useLaserRay = false;
+        }
+    });
+
+
+
+    scene.addEventListener('laser-added', function (event) {
+        console.log('(fg) laser raycaster added!', event);
+    });
+    scene.addEventListener('laser-added', function (event) {
+        console.log('(fg.el) laser raycaster added!', event);
+    });
+
+    //sets the event that is handled in fgraph's tick function
+    scene.addEventListener('click', function (evt) {
+        fgraph.components.forcegraph.state.input = "mouseclicked";
+    });
+
+    currentRig = document.querySelector('#d_cam');
+
+</script>
+
+
+</body>
 </html>
